[package]
name = "ws-sdk"
version = "0.1.6"
edition = "2021"
description = "A Rust SDK for writing Webassembly for W3bstream."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.0.1"
base64 = "0.21.0"
