[package]
name = "ws-sdk"
version = "0.1.14"
edition = "2021"
description = "A Rust SDK for writing Webassembly for W3bstream."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/machinefi/w3bstream-wasm-rust-sdk"
homepage = "https://w3bstream.com/"

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "2.0.1"
base64 = "0.21.0"
ecdsa = "0.16.6"
hex = "0.4.3"
k256 = { version = "0.13.1", optional = true }
p256 = { version = "0.13.1", optional = true }

[features]
crypto = ["k256", "p256"]


[package.metadata.docs.rs]
features = ["crypto"]
all-features = true